Twenty Thirteen: Correct alignment of blocks inside a `full-width` or `wide-width` group block.
Props sabernhardt.
Fixes #51440.
Built from https://develop.svn.wordpress.org/trunk@49508


git-svn-id: http://core.svn.wordpress.org/trunk@49263 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentythirteen/css/editor-blocks.css
+++ b/wp-content/themes/twentythirteen/css/editor-blocks.css
@@ -364,7 +364,9 @@ p.has-drop-cap:not(:focus)::first-letter {
 
 /* Group */
 
-.wp-block[data-type="core/group"] > .editor-block-list__block-edit > div > .wp-block-group > .wp-block-group__inner-container > .editor-inner-blocks > .editor-block-list__layout > .wp-block {
+.wp-block[data-type="core/group"] > .editor-block-list__block-edit > div > .wp-block-group > .wp-block-group__inner-container > .editor-inner-blocks > .editor-block-list__layout > .wp-block,
+[data-align="wide"] .wp-block,
+[data-align="full"] .wp-block {
 	max-width: 634px;
 }
 
